{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 188,
  "lineage": "37abfd07-11ec-6598-97c7-7bb4f3bf2179",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-all-fgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-12-30T07:25:25.959-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cse-us-341516/global/firewalls/allow-fgt-rxu",
            "log_config": [],
            "name": "allow-fgt-rxu",
            "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/untrust-rxu",
            "priority": 1000,
            "project": "cse-us-341516",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/firewalls/allow-fgt-rxu",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-fgt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.untrust",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-12-30T07:25:26.113-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cse-us-341516/global/firewalls/allow-internal-rxu",
            "log_config": [],
            "name": "allow-internal-rxu",
            "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/trust-rxu",
            "priority": 1000,
            "project": "cse-us-341516",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/firewalls/allow-internal-rxu",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.trust",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "fortigate",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/zones/us-central1-c/disks/log-disk-rxu"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fortigcp-project-001/global/images/fortinet-fgtondemand-723-20221110-001-w-license",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/zones/us-central1-c/disks/tec-fgt-rxu"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cse-us-341516/zones/us-central1-c/instances/tec-fgt-rxu",
            "instance_id": "5234108404347354142",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "user-data": "config firewall policy\n    edit 1\n        set name inside-out\n        set srcintf port2\n        set dstintf port1\n        set action accept\n        set srcaddr all\n        set dstaddr all\n        set schedule always\n        set service ALL\n        set nat enable\n    next\n    edit 2\n        set name ubu-vip-in\n        set srcintf port1\n        set dstintf port2\n        set action accept\n        set srcaddr all\n        set dstaddr ubu-serv\n        set [...]
            },
            "metadata_fingerprint": "xieU5MQj61c=",
            "name": "tec-fgt-rxu",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.192.12.153",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/untrust-rxu",
                "network_ip": "192.168.128.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/regions/us-central1/subnetworks/untrust-subnet-rxu",
                "subnetwork_project": "cse-us-341516"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/trust-rxu",
                "network_ip": "192.168.129.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/regions/us-central1/subnetworks/trust-subnet-rxu",
                "subnetwork_project": "cse-us-341516"
              }
            ],
            "project": "cse-us-341516",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/zones/us-central1-c/instances/tec-fgt-rxu",
            "service_account": [
              {
                "email": "726589262642-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "allow-fgt",
              "allow-internal"
            ],
            "tags_fingerprint": "AkZ4B380BYw=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_disk.logdisk",
            "google_compute_network.trust",
            "google_compute_network.untrust",
            "google_compute_subnetwork.trust",
            "google_compute_subnetwork.untrust",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-pro-cloud/global/images/ubuntu-pro-2004-focal-v20221214",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/zones/us-central1-c/disks/tec-ubu-rxu"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cse-us-341516/zones/us-central1-c/instances/tec-ubu-rxu",
            "instance_id": "6530279480731286558",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "Zq1N5lFDAlA=",
            "metadata_startup_script": "#!/bin/bash\nexec \u003e \u003e(tee /var/log/user-data.log|logger -t user-data -s 2\u003e/dev/console) 2\u003e\u00261\necho \"Wait for Internet access through the FGTs\"\nwhile ! curl --connect-timeout 3 \"http://www.google.com\" \u0026\u003e /dev/null\n    do continue\ndone\napt-get update -y\n#install apache2\napt-get install -y apache2\ncd /var/www/html\nbase64 /dev/urandom | head -c 32768 \u003e 32KB.txt\nbase64 /dev/urandom | head -c 45056 \u003e 44KB [...]
            "name": "tec-ubu-rxu",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/trust-rxu",
                "network_ip": "192.168.129.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/regions/us-central1/subnetworks/trust-subnet-rxu",
                "subnetwork_project": "cse-us-341516"
              }
            ],
            "project": "cse-us-341516",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/zones/us-central1-c/instances/tec-ubu-rxu",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-internal"
            ],
            "tags_fingerprint": "0PRvaCDq4zM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "data.template_file.linux-metadata",
            "google_compute_network.trust",
            "google_compute_subnetwork.trust",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cse-us-341516/global/networks/trust-rxu",
            "mtu": 0,
            "name": "trust-rxu",
            "project": "cse-us-341516",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/trust-rxu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "untrust",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cse-us-341516/global/networks/untrust-rxu",
            "mtu": 0,
            "name": "untrust-rxu",
            "project": "cse-us-341516",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/untrust-rxu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default-trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/cse-us-341516/global/routes/default-trust",
            "name": "default-trust",
            "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/trust-rxu",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "192.168.129.2",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "cse-us-341516",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/routes/default-trust",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.trust",
            "google_compute_subnetwork.trust",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-30T07:25:26.312-08:00",
            "gateway_address": "192.168.129.1",
            "id": "projects/cse-us-341516/regions/us-central1/subnetworks/trust-subnet-rxu",
            "ip_cidr_range": "192.168.129.0/25",
            "name": "trust-subnet-rxu",
            "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/trust-rxu",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cse-us-341516",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/regions/us-central1/subnetworks/trust-subnet-rxu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.trust",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "untrust",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-30T07:25:26.119-08:00",
            "gateway_address": "192.168.128.1",
            "id": "projects/cse-us-341516/regions/us-central1/subnetworks/untrust-subnet-rxu",
            "ip_cidr_range": "192.168.128.0/25",
            "name": "untrust-subnet-rxu",
            "network": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/global/networks/untrust-rxu",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cse-us-341516",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cse-us-341516/regions/us-central1/subnetworks/untrust-subnet-rxu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.untrust",
            "random_string.random_name_post"
          ]
        }
      ]
    }
  ]
}